# simple-plotter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/components/: graph_components.cpp  graph_components.hpp
src/interpreter/: lexer.cpp  lexer.hpp
